[package]
name = "nagios-plugin-check-via-http"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "check_via_http"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
http = "0.2.8"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
ureq = "2.5.0"

[profile.dev]
debug = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
