[package]
name = "nagios-plugin-check-via-http"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "check_via_http"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
http = "1.1.0"
percent-encoding = "2.3.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
ureq = "2.10.1"

[profile.dev]
debug = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
